test/compile-fail/resolution/use/mod-self-struct/expected.txt
error: special identifier `self` can only be in the start position of a path
  ┌─ ./test/compile-fail/resolution/use/mod-self-struct/top.rhdl:5:8
  │
5 │ use a::self::b;
  │        ^^^^

